--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Navigate to string-calculator
-      run: cd TDD-2024/string-calculator
+#    - name: Navigate to string-calculator
+#      run: cd TDD-2024/string-calculator
     - name: Build
       run: cargo build --verbose
     - name: Run tests
